# EasyFramework

./: .gitmodules  EasyFramework.sln
Assets/Resources/: TestPanel.prefab  Text (TMP) 2.prefab  Text (TMP).prefab  TextStyleLibrary.asset
Assets/Resources/Fonts/: UITextPresetsManager.asset
Assets/Resources/UI1/: Text (TMP) 1.prefab  Text (TMP) 2.prefab
Assets/Resources/UI2/: Text (TMP) 3.prefab  Text (TMP).prefab
Assets/Scenes/: New Scene.unity  SampleScene.unity  TestScene.unity
Assets/Scripts/: Test.cs  Test2.cs  TestApp.cs  TestController.Designer.cs  TestController.cs  TestPanel.cs  TestPoolObject.cs  TestViewModel.Designer.cs  TestViewModel.cs
Assets/Scripts/Ui/: JBJB.Designer.cs  JBJB.cs  TestViewModel.Designer.cs  TestViewModel.cs  jhghjkjh.Designer.cs  jhghjkjh.cs
EasyFramework/Extensions/: ArrayExtension.cs  ListExtension.cs  ReflectionExtension.cs  StringExtension.cs
EasyFramework/Tools/: Annitations.cs  EasyEvent.cs  EasyEventManager.cs  Singleton.cs
ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
Source/EasyFramework.Core/: .gitignore  vcpkg.json
Source/EasyFramework.Core.Native/EasyFramework.Core.Native/: NativeEasySerialize.cs  NativeException.cs  NativeGeneric.cs  NativeTemplateEngine.cs  NativeUtility.cs
Source/EasyFramework.Native/: CMakeLists.txt  vcpkg.json
Source/EasyFramework.Native/EasyFramework.Native/: CMakeLists.txt  Copy.bat  EasyFramework.Native.vcxproj  algorithm.hpp  archive_wrapper.hpp  generic.cpp  global.h  serializer.cpp  template_engine.cpp  template_engine.h
Source/EasyFramework.Native/EasyFramework.Native/include/: generic.h  serializer.h
Source/EasyFramework.Native/EasyFramework.Native/src/generic/: stream_wrapper.hpp
Source/EasyFramework.Native/EasyFramework.Native/src/serialization/: algorithm.hpp  archive_wrapper.hpp  serializer.cpp
Source/EasyFramework.Native/EasyFramework.Native/src/template_engine/: template_engine.cpp
Source/EasyFramework.Native/example/: CMakeLists.txt
(+2201 files in other folders)
